# fwm

./: Cargo.toml  README  init.guile  init.ss  xinitrc
fwm/: Cargo.toml  init.ss
fwm/src/: lib.rs
scheme/: Cargo.toml
src/: lib.rs  main.rs  scheme.rs
