[package]
name = "fwm"
version = "0.1.0"
authors = ["Brennan Vincent <brennan@umanwizard.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Window management logic"
repository = "https://github.com/umanwizard/fwm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-guile = "0.1"
rand = "0.8"
x11 = { version = "2", features = ["xlib"] }
