[package]
name = "fwm"
version = "0.1.0"
authors = ["Brennan Vincent <brennan@umanwizard.com>"]
edition.workspace = true
license = "Apache-2.0"
description = "Window management logic"
repository = "https://github.com/umanwizard/fwm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
env_logger = "0.9"
libc = "0.2"
log = "0.4"
mio = {version = "0.8", features = ["os-poll", "os-ext"]}
once_cell = "1"
serde = { version = "1", features = ["derive"] }
rust-guile = { git = "https://gitlab.com/btv/rust-guile", branch = "utils" }
rand = "0.8"
timely = "0.12" # for MutableAntichain
differential-dataflow = "0.12" # for Lattice::meet
x11 = { version = "2", features = ["xlib"] }
clap = { version = "3.1.8", features = ["derive"] }
btv-scheme = { path = "../scheme" }